# SOEM

./: .gitignore  CMakeLists.txt  SOEM.kdev4
.kdev4/: SOEM.kdev4
osal/xenomai/: osal.c
oshw/xenomai/: nicdrv.c
soem/: ethercatprint.h
test/linux/eepromtool/: CMakeLists.txt
test/linux/simple_test/: CMakeLists.txt
test/linux/slaveinfo/: .CMakeLists.txt.kate-swp  CMakeLists.txt  slaveinfo.c
